--- a/.github/workflows/vue-todo-mvc-quickstart-debug.yml
+++ b/.github/workflows/vue-todo-mvc-quickstart-debug.yml
@@ -1,4 +1,4 @@
-name: React - Quickstart - Nightly
+name: Todo MVC - Quick Start (nightly)
 
 on:
   schedule:
@@ -9,35 +9,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: 
-      image: bitsrc/nightly:latest
+      image: bitsrc/ops:latest
     env:
       HOME: /home/bituser
         
     steps:
-    - name: Show BVM config
-      run: |
-        bvm config
     - name: Initialize a workspace
       run: |
-        bit new hello-world my-hello-world --env teambit.community/starters/hello-world
+        bvm config set RELEASE_TYPE nightly
+        bvm config
+        bvm versions
+        bvm upgrade
+        bit --version
+        bit new vue-todomvc my-vue-todomvc --aspect learnbit-vue.todomvc/starters/todomvc@1b7ad444b2d02e64ecda33e132d5c1abe9aacf5c
     - name: Run the app component
       run: |
-        cd my-hello-world
-        bit run hello-world-app &
+        cd my-vue-todomvc
+        bit run todomvc-app &
         checkserver http://localhost:3000
     - name: Preview components
       run: |
-        cd my-hello-world
+        cd my-vue-todomvc
         bit start &
         checkserver http://localhost:3000
     - name: Collaborate
       run: |
-        cd my-hello-world
+        cd my-vue-todomvc
         bit status
     - name: Create a local scope, compile and export
       run: |
-        barescope my-org.my-scope-name my-hello-world
-        cd my-hello-world
+        barescope my-org.my-scope-name my-vue-todomvc
+        cd my-vue-todomvc
         bit scope rename org.scope-name my-org.my-scope-name --refactor
         bit link
         bit compile
