--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -1,4 +1,4 @@
-name: Vue env - Default Starter (nightly)
+name: Vue env - Learnbit - apps (nightly)
 
 on:
   schedule:
@@ -22,43 +22,46 @@ jobs:
         bvm upgrade
         bit --version
         bit new vue my-vue-workspace --env bitdev.vue/vue-env
-    # - name: Check initial status
-    #   run: |
-    #     cd my-vue-workspace
-    #     bit list
-    #     bit status
-    #     bit templates
-    # - name: Create a new component
-    #   run: |
-    #     cd my-vue-workspace
-    #     bit create vue ui/my-first
-    #     bit install
-    #     bit list
-    #     bit status
-    #     bit start &
-    #     checkserver http://localhost:3000
-    - name: Create a new app
+    - name: Check initial status
       run: |
         cd my-vue-workspace
         bit list
         bit status
         bit templates
-        bit create vue-app apps/my-second
+    - name: Import apps
+      run: |
+        cd my-vue-workspace
+        bit import learnbit-vue.basic/my-vite-app
+        bit import learnbit-vue.basic/my-vite-hello-app
+        bit import learnbit-vue.basic/my-vite-ssr-app
+        bit status
         bit install
         bit list
         cat workspace.jsonc
-        # bit use apps/my-second
         bit app list
         bit status
-        bit run my-second-app &
+    - name: my-vite-app
+      run: |
+        cd my-vue-workspace
+        bit run my-vite-app &
         checkserver http://localhost:3000
-    # - name: Lint and test
-    #   run: |
-    #     cd my-vue-workspace
-    #     bit list
-    #     bit status
-    #     bit lint
-    #     bit test
+    - name: my-vite-hello-app
+      run: |
+        cd my-vue-workspace
+        bit run my-vite-hello-app &
+        checkserver http://localhost:3000
+    - name: my-vite-ssr-app
+      run: |
+        cd my-vue-workspace
+        bit run my-vite-ssr-app &
+        checkserver http://localhost:3000
+    - name: Lint and test
+      run: |
+        cd my-vue-workspace
+        bit list
+        bit status
+        bit lint
+        bit test
     # - name: Create a local scope, compile and export
     #   run: |
     #     barescope my-org.my-scope-name my-vue-workspace
