--- a/.github/workflows/vue-learnbit-starters-nightly.yml
+++ b/.github/workflows/vue-learnbit-starters-nightly.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Run the app component
         run: |
           cd my-vue-design-system
+          bit list
+          bit compile
           bit app list
           bit run global-theme-app &
           checkserver http://localhost:3000
