--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -34,6 +34,11 @@ jobs:
         bit import learnbit-vue.basic/my-vite-app
         bit import learnbit-vue.basic/my-vite-hello-app
         bit import learnbit-vue.basic/my-vite-ssr-app
+        bit import learnbit-vue.design-system/apps/global-theme
+        bit import learnbit-vue.design-system/apps/nested-themes
+        bit import learnbit-vue.data-fetching/brewery-app
+        bit import learnbit-vue.graphql/servers/my-apollo-server
+        bit import learnbit-vue.graphql/user-app
         bit use my-vite-app
         bit use my-vite-hello-app
         bit use my-vite-ssr-app
@@ -57,6 +62,28 @@ jobs:
       run: |
         cd my-vue-workspace
         bit run my-vite-ssr-app &
+        checkserver http://localhost:3000
+    - name: global-theme
+      run: |
+        cd my-vue-workspace
+        bit run global-theme &
+        checkserver http://localhost:3000
+    - name: nested-themes
+      run: |
+        cd my-vue-workspace
+        bit run nested-themes &
+        checkserver http://localhost:3000
+    - name: brewery-app
+      run: |
+        cd my-vue-workspace
+        bit run brewery-app &
+        checkserver http://localhost:3000
+    - name: user-app
+      run: |
+        cd my-vue-workspace
+        bit run my-apollo-server --port 4000 &
+        checkserver http://localhost:4000
+        bit run user-app &
         checkserver http://localhost:3000
     - name: Lint and test
       run: |
