--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Import apps
       run: |
         cd my-vue-workspace
+        # import
         bit import learnbit-vue.basic/my-vite-app
         bit import learnbit-vue.basic/my-vite-hello-app
         bit import learnbit-vue.basic/my-vite-ssr-app
@@ -39,11 +40,19 @@ jobs:
         bit import learnbit-vue.data-fetching/brewery-app
         bit import learnbit-vue.graphql/servers/my-apollo-server
         bit import learnbit-vue.graphql/user-app
+        # use
         bit use my-vite-app
         bit use my-vite-hello-app
         bit use my-vite-ssr-app
+        bit use apps/global-theme
+        bit use apps/nested-themes
+        bit use brewery-app
+        bit use servers/my-apollo-server
+        bit use user-app
+        # debug
         bit status
         bit install
+        # check
         bit list
         cat workspace.jsonc
         bit app list
