--- a/.github/workflows/vue-bare-starter-nightly.yml
+++ b/.github/workflows/vue-bare-starter-nightly.yml
@@ -27,6 +27,9 @@ jobs:
         cd my-bare-vue-workspace
         bit list
         bit status
+        # debug
+        bit import bitdev.vue/vue-env
+        bit status
         bit templates
     - name: Create a new component
       run: |
