--- a/.github/workflows/vue-bare-starter-nightly.yml
+++ b/.github/workflows/vue-bare-starter-nightly.yml
@@ -50,10 +50,10 @@ jobs:
         bit app list
         bit compile
         bit app list
-        bit install
+        bit install --add-missing-deps
         bit app list
         bit status
-        bit run my-second-app &
+        bit run my-second &
         checkserver http://localhost:3000
     - name: Lint and test
       run: |
