--- a/.github/workflows/vue-learnbit-starters-nightly.yml
+++ b/.github/workflows/vue-learnbit-starters-nightly.yml
@@ -112,4 +112,4 @@ jobs:
       #     bit compile
       #     bit tag --message "initial tag"
       #     bit export
-    continue-on-error: false
+    continue-on-error: true
