--- a/.github/workflows/vue-quickstart-nightly.yml
+++ b/.github/workflows/vue-quickstart-nightly.yml
@@ -42,6 +42,8 @@ jobs:
           barescope my-org.my-scope-name my-vue-hello-world
           cd my-vue-hello-world
           bit scope rename org.scope-name my-org.my-scope-name --refactor
+          # debug
+          cat workspace.jsonc
           bit link
           bit compile
           bit tag --message "initial tag"
