--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -109,13 +109,13 @@ jobs:
         bit status
         bit lint
         bit test
-    # - name: Create a local scope, compile and export
-    #   run: |
-    #     barescope my-org.my-scope-name my-vue-workspace
-    #     cd my-vue-workspace
-    #     bit scope rename org.scope-name my-org.my-scope-name --refactor
-    #     bit link
-    #     bit compile
-    #     bit tag --message "initial tag"
-    #     bit export
+    - name: Create a local scope, compile and export
+      run: |
+        barescope my-org.my-scope-name my-vue-workspace
+        cd my-vue-workspace
+        bit scope rename org.scope-name my-org.my-scope-name --refactor
+        bit link
+        bit compile
+        bit tag --message "initial tag"
+        bit export
     continue-on-error: true
