--- a/.github/workflows/vue-quickstart-nightly.yml
+++ b/.github/workflows/vue-quickstart-nightly.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run the app component
         run: |
           cd my-vue-hello-world
-          # debug
-          bit compile
+          # # debug
+          # bit compile
           bit app list
           bit run hello-world-app &
           checkserver http://localhost:3000
