--- a/.github/workflows/vite-ripple-nightly.yml
+++ b/.github/workflows/vite-ripple-nightly.yml
@@ -50,10 +50,11 @@ jobs:
       run: |
         cd my-vite-workspace
         bit sign teambit.vite/examples/vue/my-component --multiple --rebuild --log error
-    - name: Bit sign examples/vue/my-second
-      run: |
-        cd my-vite-workspace
-        bit sign teambit.vite/examples/vue/my-second --multiple --rebuild --log error
+    # # debug
+    # - name: Bit sign examples/vue/my-second
+    #   run: |
+    #     cd my-vite-workspace
+    #     bit sign teambit.vite/examples/vue/my-second --multiple --rebuild --log error
     - name: Bit sign examples/vue/my-vue-env
       run: |
         cd my-vite-workspace
