--- a/.github/workflows/vue-learnbit-starters-nightly.yml
+++ b/.github/workflows/vue-learnbit-starters-nightly.yml
@@ -74,9 +74,9 @@ jobs:
           bit status
       - name: Create a local scope, compile and export (data-fetching)
         run: |
-          barescope my-org.my-scope-name my-vue-data-fetching
+          barescope my-org.my-scope-name1 my-vue-data-fetching
           cd my-vue-data-fetching
-          bit scope rename org.scope-name my-org.my-scope-name --refactor
+          bit scope rename org.scope-name my-org.my-scope-name1 --refactor
           bit link
           bit compile
           bit tag --message "initial tag"
@@ -106,9 +106,9 @@ jobs:
           bit status
       - name: Create a local scope, compile and export (graphql)
         run: |
-          barescope my-org.my-scope-name my-vue-graphql
+          barescope my-org.my-scope-name2 my-vue-graphql
           cd my-vue-graphql
-          bit scope rename org.scope-name my-org.my-scope-name --refactor
+          bit scope rename org.scope-name my-org.my-scope-name2 --refactor
           bit link
           bit compile
           bit tag --message "initial tag"
