--- a/.github/workflows/vue-quickstart-nightly.yml
+++ b/.github/workflows/vue-quickstart-nightly.yml
@@ -45,6 +45,8 @@ jobs:
           # debug
           cat workspace.jsonc
           bit link
+          # debug
+          bit ws-config write
           bit compile
           bit tag --message "initial tag"
           bit export
