--- a/.github/workflows/vue-quickstart-nightly.yml
+++ b/.github/workflows/vue-quickstart-nightly.yml
@@ -47,6 +47,7 @@ jobs:
           bit link
           # debug
           bit ws-config write
+          bit install
           bit compile
           bit tag --message "initial tag"
           bit export
