--- a/.github/workflows/vue-default-starter-nightly.yml
+++ b/.github/workflows/vue-default-starter-nightly.yml
@@ -41,18 +41,11 @@ jobs:
       run: |
         cd my-vue-workspace
         bit create vue-app apps/my-second
-        bit install
-        bit list
         # debug
-        # bit use apps/my-second
-        bit app list
-        bit compile
-        bit status
-        bit app list
-        bit install
-        bit status
-        bit app list
+        # bit install
         bit install --add-missing-deps
+        bit list
+        # bit use apps/my-second
         bit status
         bit app list
         bit run my-second &
@@ -70,7 +63,8 @@ jobs:
         cd my-vue-workspace
         bit scope rename org.scope-name my-org.my-scope-name --refactor
         bit link
-        bit compile
+        # debug
+        bit install || bit compile
         bit tag --message "initial tag"
         bit export
     continue-on-error: false
