--- a/.github/workflows/vue-default-starter-nightly.yml
+++ b/.github/workflows/vue-default-starter-nightly.yml
@@ -41,13 +41,13 @@ jobs:
       run: |
         cd my-vue-workspace
         bit create vue-app apps/my-second
+        # bit use apps/my-second
         # debug
         # bit install
         bit install --add-missing-deps
         bit list
-        # bit use apps/my-second
-        bit status
         bit app list
+        bit status
         bit run my-second &
         checkserver http://localhost:3000
     - name: Lint and test
@@ -64,6 +64,7 @@ jobs:
         bit scope rename org.scope-name my-org.my-scope-name --refactor
         bit link
         # debug
+        # bit compile
         bit install || bit compile
         bit tag --message "initial tag"
         bit export
