--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -118,4 +118,4 @@ jobs:
         bit compile
         bit tag --message "initial tag"
         bit export
-    continue-on-error: true
+    continue-on-error: false
