--- a/.github/workflows/vite-ripple-nightly.yml
+++ b/.github/workflows/vite-ripple-nightly.yml
@@ -38,22 +38,22 @@ jobs:
       run: |
         cd my-vite-workspace
         bit sign teambit.vite/examples/react/my-react-preview --multiple --rebuild --log error
-    - name: Bit sign examples/vue/my-component
-      run: |
-        cd my-vite-workspace
-        bit sign teambit.vite/examples/vue/my-component --multiple --rebuild --log error
-    - name: Bit sign examples/vue/my-second
-      run: |
-        cd my-vite-workspace
-        bit sign teambit.vite/examples/vue/my-second --multiple --rebuild --log error
-    - name: Bit sign examples/vue/my-vue-env
-      run: |
-        cd my-vite-workspace
-        bit sign teambit.vite/examples/vue/my-vue-env --multiple --rebuild --log error
-    - name: Bit sign examples/vue/my-vue-preview
-      run: |
-        cd my-vite-workspace
-        bit sign teambit.vite/examples/vue/my-vue-preview --multiple --rebuild --log error
+    # - name: Bit sign examples/vue/my-component
+    #   run: |
+    #     cd my-vite-workspace
+    #     bit sign teambit.vite/examples/vue/my-component --multiple --rebuild --log error
+    # - name: Bit sign examples/vue/my-second
+    #   run: |
+    #     cd my-vite-workspace
+    #     bit sign teambit.vite/examples/vue/my-second --multiple --rebuild --log error
+    # - name: Bit sign examples/vue/my-vue-env
+    #   run: |
+    #     cd my-vite-workspace
+    #     bit sign teambit.vite/examples/vue/my-vue-env --multiple --rebuild --log error
+    # - name: Bit sign examples/vue/my-vue-preview
+    #   run: |
+    #     cd my-vite-workspace
+    #     bit sign teambit.vite/examples/vue/my-vue-preview --multiple --rebuild --log error
     - name: Bit sign vite-bundler
       run: |
         cd my-vite-workspace
