--- a/.github/workflows/vite-ripple-nightly.yml
+++ b/.github/workflows/vite-ripple-nightly.yml
@@ -22,6 +22,18 @@ jobs:
         bvm upgrade
         bit --version
         bit init my-vite-workspace --bare --log error
+    - name: Initialize a bit sign directory
+      run: |
+        cd ~
+        mkdir bit-sign
+        cd bit-sign
+        npm init -y
+        npm install @teambit/dot-cli.sign
+        CURRENT_PATH=$(pwd)
+        echo "Current path is: $CURRENT_PATH"
+        cd ~
+        echo "{ \"file:///$CURRENT_PATH/node_modules/@teambit/dot-cli.sign": {} }" > ~/.bitrc.jsonc
+        cat ~/.bitrc.jsonc
     - name: Bit sign pre-bundles/react/ui/docs-app
       run: |
         cd my-vite-workspace
