--- a/.github/workflows/vite-ripple-nightly.yml
+++ b/.github/workflows/vite-ripple-nightly.yml
@@ -24,16 +24,14 @@ jobs:
         bit init my-vite-workspace --bare --log error
     - name: Initialize a bit sign directory
       run: |
-        cd ~
-        mkdir bit-sign
-        cd bit-sign
+        mkdir ~/bit-sign
+        cd ~/bit-sign
         bit init
         bit config set user.token ${{ secrets.BIT_USER_TOKEN }}
         bit install @teambit/dot-cli.sign
-        CURRENT_PATH=$(pwd)
-        echo "Current path is: $CURRENT_PATH"
-        cd ~
-        echo "{ \"file://$CURRENT_PATH/node_modules/@teambit/dot-cli.sign\": {} }" > ~/.bitrc.jsonc
+        CURRENT_DIR=$(pwd)
+        echo "Current path is: $CURRENT_DIR"
+        echo "{ \"file://$CURRENT_DIR/node_modules/@teambit/dot-cli.sign\": {} }" > ~/.bitrc.jsonc
         cat ~/.bitrc.jsonc
     - name: Bit sign pre-bundles/react/ui/docs-app
       run: |
