--- a/.github/workflows/vue-ripple-nightly.yml
+++ b/.github/workflows/vue-ripple-nightly.yml
@@ -22,6 +22,17 @@ jobs:
         bvm upgrade
         bit --version
         bit init my-vue-workspace --bare --log error
+    - name: Initialize a bit sign directory
+      run: |
+        mkdir ~/bit-sign
+        cd ~/bit-sign
+        bit init
+        bit config set user.token ${{ secrets.BIT_USER_TOKEN }}
+        bit install @teambit/dot-cli.sign
+        CURRENT_DIR=$(pwd)
+        echo "Current path is: $CURRENT_DIR"
+        echo "{ \"file://$CURRENT_DIR/node_modules/@teambit/dot-cli.sign\": {} }" > ~/.bitrc.jsonc
+        cat ~/.bitrc.jsonc
     - name: Bit sign dev-services/preview/vue-mounter
       run: |
         cd my-vue-workspace
